--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,25 @@
-/* You can add global styles to this file, and also import other style files */
+@import 'assets/css/theme.scss';
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+    background-color: #151515;
+    padding-top: 60px;
+    height: 100%;
+    margin: 0;
+}
+
+html {
+    margin: 0;
+}
+
+body * {
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.mat-typography {
+    margin: 0;
+    padding: 0;
+}
