- created skeleton for dashboard page - refactored nav-bar

--- a/src/app/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin/admin-dashboard/admin-dashboard.component.html
@@ -1,1 +1,18 @@
-<p>admin-dashboard works!</p>
+<div class="dashboard-container">
+    <div class="top-container">
+        <div class="totals-row">
+            <div class="total-item"></div>
+            <div class="total-item"></div>
+            <div class="total-item"></div>
+            <div class="total-item"></div>
+            <div class="total-item"></div>
+        </div>
+    </div>
+    <div class="center-container">
+        <div class="overview"></div>
+    </div>
+    <div class="bottom-container">
+        <div class="additional-info">
+        </div>
+    </div>
+</div>
