--- a/src/app/admin/admin-nav-bar/admin-nav-bar.component.scss
+++ b/src/app/admin/admin-nav-bar/admin-nav-bar.component.scss
@@ -1,33 +1,13 @@
-.header {
-    position: absolute;
-    display: flex;
+a {
     width: 100%;
-    height: 60px;
-    align-items: center;
-    padding-left: 15px;
-    padding-right: 15px;
-    color: aliceblue;
-    background: rgba(255, 255, 255, 0.2);
+    font-size: 18px;
+    font-weight: 500;
 
-    .spaces {
-        flex: 1 1 auto;
-    }
-
-    .logo {
-        margin-left: 20px;
-        font-size: 25px;
-        font-weight: 800;
-        display: flex;
-        align-items: center;
-    }
-
-    a {
-        font-size: 18px;
+    &.active {
         font-weight: 700;
-        color: antiquewhite;
     }
+}
 
-    a:hover {
-        background-color: black;
-    }
+a:hover {
+    background-color: rgba(103, 58, 183, 0.1);
 }
