- connected localization with default en language

--- a/src/app/admin/admin-nav-bar/admin-nav-bar.component.html
+++ b/src/app/admin/admin-nav-bar/admin-nav-bar.component.html
@@ -3,14 +3,14 @@
         <a mat-button color="primary"
            [routerLinkActive]="['active']"
            routerLink="/dashboard">
-            Dashboard
+            {{'AdminNavigationBar.Dashboard' | translate}}
         </a>
     </mat-list-item>
     <mat-list-item>
         <a mat-button color="primary"
            [routerLinkActive]="['active']"
            routerLink="/orders">
-            Orders
+            {{'AdminNavigationBar.Orders' | translate}}
         </a>
     </mat-list-item>
 </mat-list>
