--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,9 +1,7 @@
 <mat-toolbar color="primary">
-    <mat-toolbar-row>
-        <button mat-button (click)="opened=!opened">
-            <mat-icon>menu</mat-icon>
-        </button>
-    </mat-toolbar-row>
+    <div class="admin-header">
+        <app-admin-header></app-admin-header>
+    </div>
 </mat-toolbar>
 <mat-sidenav-container>
     <mat-sidenav [(opened)]="opened" mode="side">
