- refactored admin navigation bar

--- a/src/app/admin/admin-header/admin-header.component.html
+++ b/src/app/admin/admin-header/admin-header.component.html
@@ -2,7 +2,7 @@
     <mat-toolbar-row>
         <div class="toolbar-row">
             <div class="menu">
-                <button mat-button (click)="opened=!opened">
+                <button mat-button (click)="toggleSideNav()">
                     <mat-icon>menu</mat-icon>
                 </button>
             </div>
