- made a graph of the number of sales for each month on the main page

--- a/src/app/admin/dashboard/admin-dashboard.component.html
+++ b/src/app/admin/dashboard/admin-dashboard.component.html
@@ -9,7 +9,9 @@
         </div>
     </div>
     <div class="center-container">
-        <div class="overview"></div>
+        <div class="overview">
+            <app-sales-statistic></app-sales-statistic>
+        </div>
     </div>
     <div class="bottom-container">
         <div class="additional-info">
