--- a/src/app/admin/dashboard/admin-dashboard.component.html
+++ b/src/app/admin/dashboard/admin-dashboard.component.html
@@ -1,11 +1,11 @@
 <div class="dashboard-container">
     <div class="top-container">
         <div class="totals-row">
-            <div class="total-item"></div>
-            <div class="total-item"></div>
-            <div class="total-item"></div>
-            <div class="total-item"></div>
-            <div class="total-item"></div>
+            <mat-card class="total-item"></mat-card>
+            <mat-card class="total-item"></mat-card>
+            <mat-card class="total-item"></mat-card>
+            <mat-card class="total-item"></mat-card>
+            <mat-card class="total-item"></mat-card>
         </div>
     </div>
     <div class="center-container">
@@ -14,7 +14,7 @@
         </div>
     </div>
     <div class="bottom-container">
-        <div class="additional-info">
-        </div>
+        <mat-card class="additional-info">
+        </mat-card>
     </div>
 </div>
