--- a/src/app/admin/dashboard/sales-statistic/sales-statistic.component.html
+++ b/src/app/admin/dashboard/sales-statistic/sales-statistic.component.html
@@ -1,6 +1,23 @@
-<div class="graph">
-    <div *ngIf="statisticsMap?.size == 0" class="spinner">
+<mat-card class="sales-statistic-container">
+    <div class="date-picker" *ngIf="!isLoading" >
+        <mat-form-field appearance="fill">
+            <mat-label>Enter a date range</mat-label>
+            <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
+                <input matStartDate formControlName="start" placeholder="Start date">
+                <input matEndDate formControlName="end" placeholder="End date" (dateInput)="onSelectedDate(range)">
+            </mat-date-range-input>
+            <mat-hint></mat-hint>
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-date-range-picker #picker></mat-date-range-picker>
+
+            <mat-error *ngIf="range.controls['start'].hasError('matStartDateInvalid')">Invalid start date</mat-error>
+            <mat-error *ngIf="range.controls['end'].hasError('matEndDateInvalid')">Invalid end date</mat-error>
+        </mat-form-field>
+    </div>
+    <div *ngIf="isLoading" class="spinner">
         <mat-spinner></mat-spinner>
     </div>
-    <canvas id="canvas" width="400" height="400">{{chart}}</canvas>
-</div>
+    <div class="graph" [ngClass]="{'azure': !isLoading}">
+        <canvas id="canvas" width="600" height="400">{{chart}}</canvas>
+    </div>
+</mat-card>
