--- a/src/app/admin/dashboard/sales-statistic/sales-statistic.component.scss
+++ b/src/app/admin/dashboard/sales-statistic/sales-statistic.component.scss
@@ -1,8 +1,21 @@
-.graph {
-    margin: 15px;
-    background-color: azure;
-    width: 400px;
-    height: 400px;
+.sales-statistic-container {
+    background-color: rgba(103, 58, 183, 0.1);
+    height: 510px;
+    width: 630px;
+
+    .date-picker {
+        margin-bottom: 7px;
+    }
+
+    .graph {
+        width: 600px;
+        height: 400px;
+        margin-bottom: 5px;
+
+        &.azure {
+            background-color: azure;
+        }
+    }
 }
 
 .spinner {
