--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,9 @@
 <div class="header">
     <div class="header__title">FFP ADMIN</div>
     <div class="header__navigation">
-        <a class="app-a" routerLink="demo" routerLinkActive="app-a_active">demo</a>
+        <a class="ffp-a" routerLink="dashboard" routerLinkActive="ffp-a_active">dashboard</a>
+        <a class="ffp-a" routerLink="establishment" routerLinkActive="ffp-a_active">establishment</a>
+        <a class="ffp-a" routerLink="dishes" routerLinkActive="ffp-a_active">dishes</a>
+        <a class="ffp-a" routerLink="demo" routerLinkActive="ffp-a_active">demo</a>
     </div>
 </div>
