- implemented data-table for Dishes

--- a/src/app/pages/dishes/dishes-overview/dishes-overview.component.html
+++ b/src/app/pages/dishes/dishes-overview/dishes-overview.component.html
@@ -1,1 +1,60 @@
-<p>dishes-overview works!</p>
+<ffp-page>
+  <table mat-table [dataSource]="dataSource" matSort matSortDisableClear="true"
+         [matSortActive]="defaultSort.active" [matSortDirection]="defaultSort.direction">
+
+    <ng-container matColumnDef="id">
+      <th mat-header-cell class="dc-label" *matHeaderCellDef mat-sort-header>Id</th>
+      <td mat-cell class="dc-content" *matCellDef="let element">{{element.id}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="name">
+      <th mat-header-cell class="dc-label" *matHeaderCellDef mat-sort-header>Name</th>
+      <td mat-cell class="dc-content" *matCellDef="let element">{{element['name']}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="description">
+      <th mat-header-cell class="dc-label" *matHeaderCellDef mat-sort-header>Description</th>
+      <td mat-cell class="dc-content" *matCellDef="let element">{{element['description']}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="price">
+      <th mat-header-cell class="dc-label" *matHeaderCellDef mat-sort-header>Price</th>
+      <td mat-cell class="dc-content" *matCellDef="let element">{{element['price']}}</td>
+    </ng-container>
+
+    <!--    <ng-container matColumnDef="createdDate">-->
+    <!--      <th mat-header-cell class="dc-label" *matHeaderCellDef mat-sort-header>Created date</th>-->
+    <!--      <td mat-cell class="dc-content" *matCellDef="let element">{{formatDate(element['createdDate'])}}</td>-->
+    <!--    </ng-container>-->
+
+    <!--    <ng-container matColumnDef="lastModifiedDate">-->
+    <!--      <th mat-header-cell class="dc-label" *matHeaderCellDef mat-sort-header>Last modified date</th>-->
+    <!--      <td mat-cell class="dc-content" *matCellDef="let element">{{formatDate(element['lastModifiedDate'])}} </td>-->
+    <!--    </ng-container>-->
+
+    <ng-container matColumnDef="noData">
+      <td mat-cell class="dc-label no-data-cell" *matCellDef="let element" [attr.colspan]="displayedColumns.length">
+        <ng-container *ngIf="!(error$ | async) && !loading">
+          <span class="dc-content">No dishes</span>
+        </ng-container>
+        <ng-container *ngIf="(error$ | async) && !loading">
+          <span class="dc-label">System Failure</span>
+          <span class="dc-content">Error</span>
+          <span class="retry" (click)="retry()">Retry</span>
+        </ng-container>
+        <ng-container *ngIf="loading">
+          <span class="dc-label">Retrieving data...</span>
+        </ng-container>
+      </td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns, sticky: true"></tr>
+    <ng-container *ngIf="dishesTotal && !loading">
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </ng-container>
+    <ng-container *ngIf="!dishesTotal || loading">
+      <tr mat-row *matRowDef="let row; columns: ['noData'];" class="no-data-row"></tr>
+    </ng-container>
+  </table>
+
+  <mat-paginator [length]="dishesTotal" [pageSize]="10"></mat-paginator>
+</ffp-page>
