--- a/src/app/components/page/page.component.scss
+++ b/src/app/components/page/page.component.scss
@@ -1,9 +1,9 @@
 @import 'styles/mixins';
 
 .ffp-page {
-  max-width: 90%;
-  height: 86vh;
-  margin: 16px auto;
+  max-width: 98vw;
+  height: 90vh;
+  margin: 12px auto 16px auto;
 
   background: $base;
   border-radius: 10px;
