--- a/src/app/pages/dishes/dishes-overview/dishes-overview.component.scss
+++ b/src/app/pages/dishes/dishes-overview/dishes-overview.component.scss
@@ -1,3 +1,9 @@
+.table__tool-bar {
+  .tool-bar__searching {
+    width: 400px;
+  }
+}
+
 .dish__description-cell {
   white-space: nowrap;
   overflow: hidden;
@@ -12,5 +18,3 @@
     width: 100px;
   }
 }
-
-
