--- a/src/app/shared/controls/input/input.component.html
+++ b/src/app/shared/controls/input/input.component.html
@@ -1,2 +1,7 @@
-<input type="text" class="ffp-input" [value]="value" [placeholder]="placeholder || ''"
-    [attr.disabled]="isDisabled ? true : null" (keyup)="onKeyup($event.target['value'])" (blur)="onBlur()">
+<div class="wrapper">
+  <input type="text" class="ffp-input" [value]="value" [placeholder]="placeholder || ''"
+         [attr.disabled]="isDisabled ? true : null" (keyup)="onKeyup($event.target['value'])" (blur)="onBlur()">
+  <ng-container *ngIf="type === 'search'">
+    <i class="fa fa-search"></i>
+  </ng-container>
+</div>
