--- a/src/app/shared/controls/input/input.component.scss
+++ b/src/app/shared/controls/input/input.component.scss
@@ -1,7 +1,23 @@
 @import 'styles/colors';
 
-:host-context(.form-field_error) {
-  input {
-    border: 1px solid $error;
+.wrapper {
+  display: flex;
+  align-items: center;
+
+  :host-context(.form-field_error) {
+    input {
+      border: 1px solid $error;
+    }
+  }
+
+  i {
+    width: 2px;
+    position: relative;
+    right: 30px;
+    font-size: 20px;
+    line-height: 40px;
+    z-index: 1;
+    color: #152900;
   }
 }
+
