--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,20 +1,16 @@
 <div class="dashboard-container">
   <div class="top-container">
     <div class="totals-row">
-      <mat-card class="total-item"></mat-card>
-      <mat-card class="total-item"></mat-card>
-      <mat-card class="total-item"></mat-card>
-      <mat-card class="total-item"></mat-card>
-      <mat-card class="total-item"></mat-card>
+      <div class="card total-item"></div>
+      <div class="card total-item"></div>
+      <div class="card total-item"></div>
+      <div class="card total-item"></div>
+      <div class="card total-item"></div>
     </div>
   </div>
   <div class="center-container">
     <div class="overview">
       <app-sales-statistic></app-sales-statistic>
     </div>
-  </div>
-  <div class="bottom-container">
-    <mat-card class="additional-info">
-    </mat-card>
   </div>
 </div>
