--- a/src/app/pages/dashboard/components/sales-statistic/sales-statistic.component.scss
+++ b/src/app/pages/dashboard/components/sales-statistic/sales-statistic.component.scss
@@ -1,42 +1,56 @@
 @import 'styles/mixins';
 
-.shadow {
-  @include shadow;
-  padding: 20px;
-}
+.card-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
 
-.card {
-  @include card;
-
-  &:hover {
-    @include shadow-hower;
-  }
-}
-
-.sales-statistic-container {
-  background-color: rgba(103, 58, 183, 0.1);
-  height: 510px;
-  width: 630px;
-
-  .date-picker {
-    margin-bottom: 7px;
+  .shadow {
+    @include shadow;
+    padding: 20px;
   }
 
-  .graph {
-    width: 600px;
-    height: 400px;
-    margin-bottom: 5px;
+  .card {
+    @include card;
 
-    &.azure {
-      background-color: azure;
+    &:hover {
+      @include shadow-hower;
+    }
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+  }
+
+  .sales-statistic-container {
+    background-color: rgba(103, 58, 183, 0.1);
+    height: 510px;
+    width: 630px;
+
+    .date-picker {
+      margin-bottom: 7px;
+    }
+
+    .graph {
+      width: 600px;
+      height: 400px;
+      margin-bottom: 5px;
+
+      &.azure {
+        background-color: azure;
+      }
     }
   }
-}
 
-.spinner {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  .spinner {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
 }
