- made ordering overview with ngrx

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,8 @@
     <div class="header__title">FFP ADMIN</div>
     <div class="header__navigation">
         <a class="ffp-a" routerLink="dashboard" routerLinkActive="ffp-a_active">dashboard</a>
-        <a class="ffp-a" routerLink="establishment" routerLinkActive="ffp-a_active">establishment</a>
+        <a class="ffp-a" routerLink="ordering" routerLinkActive="ffp-a_active">orders</a>
+        <a class="ffp-a" routerLink="establishment" routerLinkActive="ffp-a_active">establishments</a>
         <a class="ffp-a" routerLink="dishes" routerLinkActive="ffp-a_active">dishes</a>
         <a class="ffp-a" routerLink="demo" routerLinkActive="ffp-a_active">demo</a>
     </div>
