- made sidenav component

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,3 @@
 @import '@angular/material/prebuilt-themes/deeppurple-amber.css';
 @import 'styles/main';
-
-body {
-
-}
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
