--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
+<!--<app-header></app-header>-->
+<app-sidenav (onToggleSidenav)="onToggleSidenav($event)"></app-sidenav>
+<app-layout [sidenavToggle]="sidenavToggle">
+  <router-outlet></router-outlet>
+</app-layout>
 
