--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,15 +10,16 @@
 
 @import 'material/material.scss';
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 html,
 body {
   margin: 0;
   font-family: $base-font-family;
   font-size: $base-font-size;
   line-height: $base-line-height;
-  background-image: linear-gradient(to right top, #bbb7ae, #b9b39d, #b3b18d, #a9af7f, #9cae72);
-  background-size: cover;
-  color: $on-base;
-  height: auto;
-  min-height: 100vh;
 }
