--- a/src/app/pages/establishment/establishments-map/establishments-map.component.html
+++ b/src/app/pages/establishment/establishments-map/establishments-map.component.html
@@ -1,1 +1,10 @@
-<p>establishments-map works!</p>
+<ffp-page>
+  <section>
+    <div class="map"
+         leaflet
+         [leafletOptions]="options"
+         [leafletLayers]="markers"
+    >
+    </div>
+  </section>
+</ffp-page>
