--- a/src/app/shared/controls/input/input.component.html
+++ b/src/app/shared/controls/input/input.component.html
@@ -1,6 +1,11 @@
 <div class="wrapper">
-  <input type="text" class="ffp-input" [value]="value" [placeholder]="placeholder || ''"
-         [attr.disabled]="isDisabled ? true : null" (keyup)="onKeyup($event.target['value'])" (blur)="onBlur()">
+  <input type="text"
+         class="ffp-input"
+         [value]="value"
+         [placeholder]="placeholder || ''"
+         [attr.disabled]="isDisabled ? true : null"
+         (keyup)="onKeyup($event.target['value'])"
+         (blur)="onBlur()">
   <ng-container *ngIf="type === 'search'">
     <i class="fa fa-search"></i>
   </ng-container>
