- made table component - used table component on the dishes-overview - made and used formatDate pipe

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,6 +1,6 @@
 $base: rgb(156, 174, 114, 0.1);
 $base-dark: #040800;
-$base-light: #BAB6AD;
+$base-light: #b3b18d;
 $on-base: #000000;
 
 $primary: #152900;
