--- a/src/app/components/page/page.component.scss
+++ b/src/app/components/page/page.component.scss
@@ -1,14 +1,21 @@
 @import 'styles/mixins';
+@import 'styles/colors';
 
 .ffp-page {
   max-width: 98vw;
   height: 90vh;
   margin: 12px auto 16px auto;
 
-  background: $base;
+  background: $base-light;
   border-radius: 10px;
   @include shadow;
   padding: 32px;
 
   position: relative;
+  overflow: auto;
+}
+
+.table-container {
+  flex: 1; /* Makes the table container take remaining vertical space */
+  overflow: auto; /* Enables vertical scrolling if needed */
 }
