--- a/src/app/pages/dishes/dishes-overview/dishes-overview.component.html
+++ b/src/app/pages/dishes/dishes-overview/dishes-overview.component.html
@@ -1,84 +1,35 @@
-<ffp-page>
-  <div class="table__tool-bar">
-    <div class="tool-bar__searching">
-      <ffp-input (keyup)="onSearchTyping()"
-                 [(ngModel)]="searchText"
-                 [type]="'search'"
-                 placeholder="Search">
-      </ffp-input>
+<ffp-table [displayedColumns]="displayedColumns"
+           [selectAll]="selectAllDishes"
+           [selectTotal]="selectDishesTotal"
+           [selectItemLoading]="selectDishLoading"
+           [selectItemsError]="selectDishError"
+           [actionName]="'DishLoadAction'"
+           [columnTemplateRefs]="{
+             category: category,
+             imageUrl: imageUrl,
+             description: description,
+             createdDate: createdDate,
+             lastModifiedDate: lastModifiedDate
+           }">
+  <ng-template #category let-data="data">
+    {{data.category.name}}
+  </ng-template>
+  <ng-template #imageUrl let-data="data">
+    <div class="dish__image-cell">
+      <img class="dish__image-img" src="{{data.imageUrl}}" alt="">
     </div>
-  </div>
-  <table mat-table [dataSource]="dataSource" matSort matSortDisableClear="true"
-         [matSortActive]="defaultSort.active" [matSortDirection]="defaultSort.direction">
-
-    <ng-container matColumnDef="id">
-      <th mat-header-cell class="dc-label" *matHeaderCellDef mat-sort-header>Id</th>
-      <td mat-cell class="dc-content" *matCellDef="let element">{{element.id}}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="name">
-      <th mat-header-cell class="dc-label" *matHeaderCellDef mat-sort-header>Name</th>
-      <td mat-cell class="dc-content" *matCellDef="let element">{{element['name']}}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="image">
-      <th mat-header-cell class="dc-label" *matHeaderCellDef mat-sort-header>Picture</th>
-      <td mat-cell class="dc-content dish__image-cell" *matCellDef="let element">
-        <img class="dish__image-img" src="{{element['imageUrl']}}">
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="category">
-      <th mat-header-cell class="dc-label" *matHeaderCellDef mat-sort-header>Category</th>
-      <td mat-cell class="dc-content" *matCellDef="let element">{{element['category']['name']}}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="description">
-      <th mat-header-cell class="dc-label" *matHeaderCellDef mat-sort-header>Description</th>
-      <td mat-cell class="dc-content dish__description-cell" *matCellDef="let element"
-          matTooltip="{{element['description']}}">
-        {{element['description']}}
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="price">
-      <th mat-header-cell class="dc-label" *matHeaderCellDef mat-sort-header>Price</th>
-      <td mat-cell class="dc-content" *matCellDef="let element">{{element['price']}}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="createdDate">
-      <th mat-header-cell class="dc-label" *matHeaderCellDef mat-sort-header>Created date</th>
-      <td mat-cell class="dc-content" *matCellDef="let element">{{formatDate(element['createdDate'])}}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="lastModifiedDate">
-      <th mat-header-cell class="dc-label" *matHeaderCellDef mat-sort-header>Last modified date</th>
-      <td mat-cell class="dc-content" *matCellDef="let element">{{formatDate(element['lastModifiedDate'])}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="noData">
-      <td mat-cell class="dc-label no-data-cell" *matCellDef="let element" [attr.colspan]="displayedColumns.length">
-        <ng-container *ngIf="!(error$ | async) && !loading">
-          <span class="dc-content">No dishes</span>
-        </ng-container>
-        <ng-container *ngIf="(error$ | async) && !loading">
-          <span class="dc-label">System Failure</span>
-          <span class="dc-content">Error</span>
-          <span class="retry" (click)="retry()">Retry</span>
-        </ng-container>
-        <ng-container *ngIf="loading">
-          <span class="dc-label">Retrieving data...</span>
-        </ng-container>
-      </td>
-    </ng-container>
-    <tr mat-header-row *matHeaderRowDef="displayedColumns, sticky: true"></tr>
-    <ng-container *ngIf="dishesTotal && !loading">
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </ng-container>
-    <ng-container *ngIf="!dishesTotal || loading">
-      <tr mat-row *matRowDef="let row; columns: ['noData'];" class="no-data-row"></tr>
-    </ng-container>
-  </table>
-
-  <mat-paginator [length]="dishesTotal" [pageSize]="10"></mat-paginator>
-</ffp-page>
+  </ng-template>
+  <ng-template #description let-data="data"
+               class="">
+    <div class="dish__description-cell"
+         matTooltip="{{data.description}}">
+      {{data.description}}
+    </div>
+  </ng-template>
+  <ng-template #createdDate let-data="data">
+    {{data.createdDate | formatDate}}
+  </ng-template>
+  <ng-template #lastModifiedDate let-data="data">
+    {{data.lastModifiedDate | formatDate}}
+  </ng-template>
+</ffp-table>
