--- a/src/styles/base/input.scss
+++ b/src/styles/base/input.scss
@@ -1,12 +1,14 @@
+@import 'styles/colors';
+
 .ffp-input {
-  border: none;
   outline: none;
   width: 100%;
   padding: 18px;
-  background: #9cae72;
+  background: $base-light;
   font-size: 14px;
   font-weight: 600;
   border-radius: 0.5rem;
+  border: 2px solid rgba(0, 0, 0, 0.21);
 
   &:disabled {
     background: rgba(0, 0, 0, 0.05);
