--- a/src/app/pages/dishes/dishes-overview/dishes-overview.component.html
+++ b/src/app/pages/dishes/dishes-overview/dishes-overview.component.html
@@ -1,4 +1,5 @@
-<ffp-table [displayedColumns]="displayedColumns"
+<ffp-table [tableName]="'DishesOverview'"
+           [displayedColumns]="displayedColumns"
            [selectAll]="selectAllDishes"
            [selectTotal]="selectDishesTotal"
            [selectItemLoading]="selectDishLoading"
