- made custom scroll

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -3,7 +3,7 @@ $base-dark: #040800;
 $base-light: #b3b18d;
 $on-base: #000000;
 
-$primary: #152900;
+$primary: rgba(21, 41, 0, 0.77);
 $primary-dark: #040800;
 $primary-light: #b9b39d;
 $on-primary: #BAB6AD;
