- made skeleton for creation pop up - set up material palette

--- a/src/app/pages/demo/demo.component.html
+++ b/src/app/pages/demo/demo.component.html
@@ -4,6 +4,7 @@
         <div class="navigation">
             <a class="ffp-a" routerLink="./styles" routerLinkActive="ffp-a_active">Styles</a>
             <a class="ffp-a" routerLink="./shared" routerLinkActive="ffp-a_active">Shared</a>
+            <a class="ffp-a" routerLink="./material" routerLinkActive="ffp-a_active">Material</a>
         </div>
         <router-outlet></router-outlet>
     </div>
